# Petrol-Rust-ORM

./: .gitignore  Cargo.toml  Readme.md
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
petrol-cli/: Cargo.toml
petrol-cli/src/: main.rs
petrol-client/: Cargo.toml
petrol-client/src/: lib.rs
petrol-codegen/: Cargo.toml
petrol-codegen/src/: lib.rs
petrol-core/: Cargo.toml
petrol-core/src/: error.rs  lib.rs  schema.rs  sql.rs
petrol-parser/: Cargo.toml
petrol-parser/src/: lib.rs  schema.pest
