[workspace]
members = [
    "petrol-cli",
    "petrol-client",
    "petrol-core",
    "petrol-parser",
    "petrol-codegen",
    "examples/basic"
]
default-members = ["petrol-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Petrol Contributors <opensource@petrol.dev>"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
inflector = { package = "Inflector", version = "0.11" }
once_cell = "1"
pest = "2"
pest_derive = "2"
petgraph = "0.6"
proc-macro2 = "1"
quote = "1"
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "rust_decimal"
] }
thiserror = "1"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
