[package]
name = "petrol-client"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
petrol-core = { path = "../petrol-core" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
